tests/neg-custom-args/captures/i15923a.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15923a.scala:7:21 ---------------------------------------
7 |  val leak = withCap(lcap => () => mkId(lcap)) // error
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^
  |Found:    (lcap: Cap^) ->? () ->? box Id[box Cap^²]^?
  |Required: (lcap: Cap^) => () =>² box Id[box Cap^?]^?
  |
  |where:    =>  refers to a fresh root capability created in value leak when checking argument to parameter op of method withCap
  |          =>² refers to a root capability associated with the result type of (lcap: Cap^): () =>² box Id[box Cap^?]^?
  |          ^   refers to the universal root capability
  |          ^²  refers to a root capability associated with the result type of (): box Id[box Cap^²]^?
  |
  |Note that reference <cap of (): box Id[box Cap^]^?>
  |cannot be included in outer capture set ?
  |
  | longer explanation available when compiling with `-explain`
